k8s/db.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: app  # [중요]
spec:
  ports:
    - port: 5432
  selector:
    app: demo-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
  namespace: app  # [중요]
  labels:
    app: demo-db
spec:
  selector:
    matchLabels:
      app: demo-db
  template:
    metadata:
      labels:
        app: demo-db
    spec:
      containers:
        - image: postgres:15
          name: postgresql
          # 2. 볼륨 마운트 경로 설정
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
              name: postgresql
          livenessProbe:
            tcpSocket:
              port: postgresql
          readinessProbe:
            tcpSocket:
              port: postgresql
          startupProbe:
            tcpSocket:
              port: postgresql
      # 3. 실제 볼륨 연결
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
