k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  labels:
    app: petclinic
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - name: http
      port: 80
      targetPort: 8080
